# reliakit

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  codecov.yml
.cargo/: mutants.toml
.github/workflows/: actionlint.yml  audit.yml  auto-publish.yml  ci.yml  coverage.yml  docs.yml  feature-powerset.yml  mutants.yml  publish-dry-run.yml  publish.yml  release.yml  scorecard.yml
crates/reliakit/: Cargo.toml  README.md
crates/reliakit-backoff/: Cargo.toml  README.md
crates/reliakit-backoff/src/: jitter.rs  lib.rs
crates/reliakit-bulkhead/: Cargo.toml  LICENSE  README.md
crates/reliakit-bulkhead/examples/: basic.rs
crates/reliakit-bulkhead/src/: lib.rs
crates/reliakit-circuit/: Cargo.toml  README.md
crates/reliakit-circuit/examples/: resilient_client.rs
crates/reliakit-circuit/src/: lib.rs  rolling.rs
crates/reliakit-codec/: Cargo.toml  README.md
crates/reliakit-codec/src/: format.rs  lib.rs
crates/reliakit-collections/: Cargo.toml  README.md
crates/reliakit-collections/src/: error.rs  lib.rs
crates/reliakit-core/: Cargo.toml  README.md
crates/reliakit-csv/: Cargo.toml  README.md
crates/reliakit-csv/src/: field.rs  lib.rs
crates/reliakit-decide/: Cargo.toml  README.md
crates/reliakit-derive/: Cargo.toml  README.md
crates/reliakit-derive/src/: lib.rs
crates/reliakit-derive/tests/: compile_fail.rs  csv.rs  json.rs
crates/reliakit-health/: Cargo.toml  README.md
crates/reliakit-health/src/: check.rs
crates/reliakit-json/: Cargo.toml  README.md
crates/reliakit-json/src/: error.rs  form.rs  lib.rs
crates/reliakit-primitives/: Cargo.toml  README.md
crates/reliakit-primitives/examples/: service_config.rs
crates/reliakit-primitives/src/: bounded.rs  collections.rs  duration.rs  error.rs  inline.rs  lib.rs  non_empty.rs  numeric.rs  semver.rs  text.rs  uuid.rs
crates/reliakit-ratelimit/: Cargo.toml  README.md
crates/reliakit-retry/: Cargo.toml  README.md
crates/reliakit-secret/: Cargo.toml  README.md
crates/reliakit-secret/examples/: secret_basic.rs
crates/reliakit-secret/src/: lib.rs
crates/reliakit-timeout/: Cargo.toml  README.md
crates/reliakit-validate/: Cargo.toml  README.md
crates/reliakit-validate/src/: lib.rs
crates/reliakit/examples/: intake_pipeline.rs
crates/reliakit/src/: lib.rs
