[workspace]
members = [
    "crates/reliakit-primitives",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/satyakwok/reliakit"
homepage = "https://github.com/satyakwok/reliakit"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
