[workspace]
members = [
    "crates/reliakit-primitives",
    "crates/reliakit-secret",
    "crates/reliakit-validate",
    "crates/reliakit-collections",
    "crates/reliakit-codec",
    "crates/reliakit-backoff",
    "crates/reliakit-bulkhead",
    "crates/reliakit-circuit",
    "crates/reliakit-ratelimit",
    "crates/reliakit-json",
    "crates/reliakit-timeout",
    "crates/reliakit-core",
    "crates/reliakit-derive",
    "crates/reliakit-decide",
    "crates/reliakit",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/satyakwok/reliakit"
homepage = "https://github.com/satyakwok/reliakit"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
