[package]
name = "reliakit-circuit"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Clock-agnostic circuit breaker for fault isolation and fast failure. no_std and zero-dependency."
keywords = ["circuit-breaker", "reliability", "resilience", "no-std", "fault-tolerance"]
categories = ["algorithms", "no-std", "rust-patterns"]

[dependencies]

# Dev-only: used by the `resilient_client` example to show the resilience crates
# working together. These do not affect the runtime dependencies of the
# published library, which remain zero.
[dev-dependencies]
reliakit-backoff = { path = "../reliakit-backoff", version = "0.1" }
reliakit-ratelimit = { path = "../reliakit-ratelimit", version = "0.1" }

[[example]]
name = "circuit_basic"
path = "examples/basic.rs"

[[example]]
name = "resilient_client"
path = "examples/resilient_client.rs"

[lints]
workspace = true
