[package]
name = "reliakit-circuit"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/reliakit-circuit"
readme = "README.md"
description = "Clock-agnostic circuit breaker for fault isolation and fast failure. no_std and zero-dependency."
keywords = ["circuit-breaker", "reliability", "resilience", "no-std", "fault-tolerance"]
categories = ["algorithms", "no-std", "rust-patterns"]

[package.metadata.docs.rs]
all-features = true

[features]
# Convenience methods that read the current time from a `reliakit_core::Clock`
# instead of taking an explicit `now: u64`. Off by default; pulls in
# `reliakit-core` (no_std, zero third-party dependencies).
core = ["dep:reliakit-core"]

[dependencies]
reliakit-core = { path = "../reliakit-core", version = "1", optional = true, default-features = false }

# Dev-only: used by the `resilient_client` example to show the resilience crates
# working together. These do not affect the runtime dependencies of the
# published library, which remain zero.
[dev-dependencies]
reliakit-backoff = { path = "../reliakit-backoff" }
reliakit-ratelimit = { path = "../reliakit-ratelimit" }

[[example]]
name = "circuit_basic"
path = "examples/basic.rs"

[[example]]
name = "resilient_client"
path = "examples/resilient_client.rs"

[lints]
workspace = true
