[package]
name = "reliakit-codec"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/reliakit-codec"
readme = "README.md"
description = "Deterministic canonical binary encoding and decoding traits for reliability-oriented Rust values."
keywords = ["codec", "binary", "canonical", "no-std", "reliability"]
categories = ["encoding", "no-std", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc", "reliakit-primitives?/std"]
alloc = []
primitives = ["alloc", "dep:reliakit-primitives", "reliakit-primitives/alloc"]

[dependencies]
reliakit-primitives = { path = "../reliakit-primitives", version = "0.5", optional = true, default-features = false }

[[example]]
name = "basic_encoding"
path = "examples/basic_encoding.rs"
required-features = ["alloc"]

[[example]]
name = "protocol_message"
path = "examples/protocol_message.rs"
required-features = ["alloc"]

[lints]
workspace = true
