[package]
name = "reliakit-collections"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/reliakit-collections"
readme = "README.md"
description = "Bounded and reliability-oriented collection types for Rust."
keywords = ["collections", "bounded", "vec", "no-std", "reliability"]
categories = ["data-structures", "rust-patterns", "no-std"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[lints]
workspace = true
