[package]
name = "reliakit-derive"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/reliakit-derive"
readme = "README.md"
description = "Derive macros for reliakit traits, implemented with only the standard library proc-macro API and no third-party dependencies."
keywords = ["derive", "macros", "serialization", "codec", "csv"]
categories = ["development-tools::procedural-macro-helpers", "encoding", "rust-patterns"]

[lib]
proc-macro = true

[dev-dependencies]
reliakit-codec = { path = "../reliakit-codec", version = "0.3", default-features = false, features = ["alloc"] }
reliakit-json = { path = "../reliakit-json", version = "0.3" }
reliakit-csv = { path = "../reliakit-csv", version = "0.1.1" }

[[example]]
name = "protocol"
path = "examples/protocol.rs"

[lints]
workspace = true
