[package]
name = "reliakit-json"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/reliakit-json"
readme = "README.md"
description = "Strict, bounded, and deterministic JSON for reliability-sensitive Rust. no_std + alloc, zero-dependency."
keywords = ["json", "strict", "no-std", "deterministic", "reliability"]
categories = ["parser-implementations", "encoding", "no-std"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["reliakit-primitives?/std", "reliakit-validate?/std"]
# RFC 8785 (JCS) canonical serialization. Off by default (opt-in).
canonical = []
# Typed extraction into reliakit-primitives constrained types. Off by default;
# pulls in reliakit-primitives (no_std + alloc, zero third-party dependencies).
primitives = ["dep:reliakit-primitives", "reliakit-primitives/alloc"]
# Accumulating field validation into a reliakit-validate ValidationError.
# Implies `primitives`. Zero third-party dependencies.
validate = ["primitives", "dep:reliakit-validate", "reliakit-validate/alloc"]

[dependencies]
reliakit-primitives = { path = "../reliakit-primitives", version = "1", optional = true, default-features = false }
reliakit-validate = { path = "../reliakit-validate", version = "1", optional = true, default-features = false }

[[example]]
name = "json_basic"
path = "examples/basic.rs"

[lints]
workspace = true
