[package]
name = "reliakit-primitives"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Reusable type-safe primitives for constrained and reliability-oriented Rust values."
keywords = ["primitives", "validation", "types", "reliability", "no-std"]
categories = ["data-structures", "rust-patterns", "no-std"]

[features]
default = ["std"]
std = []
alloc = []

[dependencies]

[[example]]
name = "primitives_basic"
path = "examples/primitives_basic.rs"

[lints]
workspace = true
