[package]
name = "reliakit-primitives"
version = "0.2.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Reusable type-safe primitives for constrained and reliability-oriented Rust values."
keywords = ["primitives", "validation", "types", "reliability", "no-std"]
categories = ["data-structures", "rust-patterns", "no-std"]

[features]
default = ["std"]
std = []
alloc = []

[dependencies]

# Dev-only: used by the service_config example to demonstrate the crates
# working together. These do not affect the runtime dependencies of the
# published library, which remain zero.
[dev-dependencies]
reliakit-secret = { path = "../reliakit-secret", version = "0.1" }
reliakit-validate = { path = "../reliakit-validate", version = "0.1" }

[[example]]
name = "primitives_basic"
path = "examples/primitives_basic.rs"

[[example]]
name = "service_config"
path = "examples/service_config.rs"

[lints]
workspace = true
