[package]
name = "reliakit-secret"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Secret-safe wrappers for Rust values that should not leak through formatting or diagnostics."
keywords = ["secret", "redaction", "security", "no-std", "reliability"]
categories = ["authentication", "config", "no-std", "rust-patterns"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []
alloc = []

[dependencies]

[[example]]
name = "secret_basic"
path = "examples/secret_basic.rs"

[lints]
workspace = true
