[package]
name = "reliakit-validate"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/reliakit-validate"
readme = "README.md"
description = "Composable validation traits and error types for Rust structs and values."
keywords = ["validation", "rules", "constraints", "no-std", "reliability"]
categories = ["data-structures", "rust-patterns", "no-std"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[[example]]
name = "validate_basic"
path = "examples/basic.rs"

[lints]
workspace = true
